--- a/aps/estilos.css
+++ b/aps/estilos.css
@@ -60,3 +60,7 @@ input[type="text"]:hover {
     background-color: #f5f5f5;
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
 }
+li{
+    border-radius: 234px;
+}
+/* Apagar esse li */
